# stm32-linux-bootloader

./: .clang-format  .gdbinit  .gitignore  CMakeLists.txt  README.md  bootstrap.sh  cortex-m.ld  defconfig  flake.nix  memory.ld  stm32f746-disco.dtb  xipImage
.github/workflows/: main.yml
cmake/: cortex-m_startup.cmake  ditto.cmake  postform.cmake
cmake/toolchains/: cortex-m7.cmake
host/loader/: Cargo.toml
host/loader/src/: loader.rs  main.rs
include/: logger.h  rtt_bootloader.h  rtt_cmd_handler.h  systick_config.h
include/hw/: flash.h  fmc.h  gpio.h  pwr.h  qspi_flash.h  quadspi.h  rcc.h  register.h  sdram.h  uart.h
src/: ditto_assert.cpp  expected_data.c  main.cpp  postform_config.cpp  rtt_bootloader.cpp  rtt_cmd_handler.cpp  startup.cpp
src/hw/: gpio.cpp  qspi_flash.cpp  rcc.cpp  sdram.cpp
